compiler/testData/javaModules/jdkModulesFromNamed/main.fir.txt
compiler/testData/javaModules/jdkModulesFromNamed/main/test.kt:11:18: error: unresolved reference 'swing'.
    val s: javax.swing.JFrame? = null
                 ^^^^^
compiler/testData/javaModules/jdkModulesFromNamed/main/test.kt:12:5: error: overload resolution ambiguity between candidates: [@InlineOnly() fun println(message: Any?): Unit, @InlineOnly() fun println(message: Boolean): Unit, @InlineOnly() fun println(message: Byte): Unit, ...]
    println(s)
    ^^^^^^^
COMPILATION_ERROR
